# paccat

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
man/: paccat.1
src/: args.rs  main.rs  pacman.rs
