[package]
name = "paccat"
version = "1.3.0"
authors = ["morganamilo <morganamilo@archlinux.org>"]
edition = "2021"

description = "Print pacman package files"
repository = "http://github.com/Morganamilo/paccat"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
alpm = "4.0.0"
alpm-utils = { version = "4.0.1", features = ["conf"] }
pacmanconf = "3.0.0"

anyhow = "1.0.86"
compress-tools = "0.15.1"
nix = { version = "0.29.0", features = ["fs", "user"] }
regex = "1.10.6"
clap = { version = "4.5.16", default-features = false, features = ["std", "cargo", "derive", "help"]}

[build-dependencies]
clap = { version = "4.5.16", default-features = false, features = ["std", "cargo", "derive", "help"]}
clap_complete = "4.5.24"

[profile.release]
codegen-units = 1
lto = true

[features]
git = ["alpm/git", "alpm-utils/git"]
generate = ["alpm/generate"]
